# OOP244Projects

./: README.md
Milestones/ms1/: CMakeLists.txt  Menu.cpp  Menu.h  Time.cpp  Time.h  Utils.cpp  Utils.h  errors.txt  main.cpp  ws
Milestones/ms2/: CMakeLists.txt  IOAble.cpp  IOAble.h  ws
Milestones/ms3/: CMakeLists.txt  IOAble.h  Patient.cpp  Patient.h  Time.h
Milestones/ms4/: CMakeLists.txt  IOAble.cpp  IOAble.h  Patient.cpp  Patient.h  TestPatient.cpp  TestPatient.h  Ticket.cpp  Ticket.h  Time.cpp  Time.h  Trgp_Tester.cpp  TriagePatient.cpp  TriagePatient.h  TstP_Tester.cpp  Utils.cpp  Utils.h  main.cpp  student_output.txt  ws
Milestones/ms5/: CMakeLists.txt  IOAble.cpp  IOAble.h  Menu.cpp  Menu.h  Patient.cpp  Patient.h  PreTriage.cpp  PreTriage.h  TestPatient.cpp  TestPatient.h  Ticket.cpp  Ticket.h  Time.cpp  Time.h  TriagePatient.cpp  TriagePatient.h  Utils.cpp  Utils.h  errors.txt  main.cpp  ms51_test.cpp  ms52_test.cpp  ms53_test.cpp  ms54_test.cpp  ms55_test.cpp  ms56_test.cpp  ws
Workshops/ws1/: file.h  reflect.txt
Workshops/ws10/: Book.cpp  Book.h  CMakeLists.txt  MatchPair.h  Student.cpp  Student.h  main.cpp
Workshops/ws2/: CMakeLists.txt  Guest.cpp  Guest.h  Room.cpp  Room.h  errors.txt  reflect.txt  student_output.txt
Workshops/ws3/: CMakeLists.txt  Icecream.cpp  Icecream.h  IcecreamTester.cpp  Vendor.cpp  Vendor.h  errors.txt  reflect.txt
Workshops/ws4/: CMakeLists.txt  Guitar.cpp  Guitar.h  errors.txt  main.cpp  reflect.txt
Workshops/ws5/: CMakeLists.txt  Hero.cpp  Hero.h  reflect.txt
Workshops/ws6/: CMakeLists.txt  EmailFile.cpp  ws  (+1 more)
(+27 files in other folders)
